--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "app.js",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
+    "datauri": "^3.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "mime-types": "^2.1.26",
-    "mongoose": "5.8.1"
+    "mongoose": "5.8.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.3.5"
