--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "multer": "^1.4.2"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.3.5"
+    "@types/jsonwebtoken": "^8.3.5",
+    "jest": "^26.6.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": " jest --runInBand ",
+    "start": "node index.js"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setupFiles":["./api/tests/fixtures/dotenv.config.js"]
   },
   "author": "Kpoke",
   "license": "ISC"
